--- a/resume.html
+++ b/resume.html
@@ -7,17 +7,14 @@
   <link rel="stylesheet" href="resumestyle.css" />
 </head>
 <body class="light">
-  <div class="layout">
-    <aside class="sidebar">
-      <h2>Jane Doe</h2>
-      <p>Email: jane@example.com</p>
-      <p>Phone: +86 138-0000-0000</p>
-      <p>Location: Shenzhen, China</p>
-      <button id="downloadBtn">📄 Download PDF</button>
-      <button id="toggleTheme">🌓 Toggle Theme</button>
-    </aside>
+  <main class="wrapper">
+    <!-- Main Resume Content -->
+    <section class="container">
+      <header>
+        <h1>Jane Doe</h1>
+        <p>Email: jane@example.com | Phone: +86 138-0000-0000 | Shenzhen, China</p>
+      </header>
 
-    <main class="content">
       <section class="education">
         <h2>🎓 Education Background</h2>
         <ul>
@@ -53,22 +50,32 @@
 
       <footer>
         <p>© 2025 Jane Doe. All rights reserved.</p>
+        <button id="toggleTheme">🌓 Toggle Theme</button>
       </footer>
-    </main>
-  </div>
+    </section>
 
-  <script>
-    const toggleBtn = document.getElementById("toggleTheme")
-    const downloadBtn = document.getElementById("downloadBtn")
+    <!-- Sidebar with PDF Download -->
+    <aside class="sidebar">
+      <button id="downloadBtn">📄 Download PDF</button>
+    </aside>
+  </main>
 
-    toggleBtn.addEventListener("click", () => {
-      document.body.classList.toggle("dark")
-      document.body.classList.toggle("light")
+  <!-- JavaScript for interactivity -->
+    <script>
+    document.addEventListener("DOMContentLoaded", () => {
+        const toggleBtn = document.getElementById("toggleTheme")
+        const downloadBtn = document.getElementById("downloadBtn")
+
+        toggleBtn.addEventListener("click", () => {
+        document.body.classList.toggle("dark")
+        document.body.classList.toggle("light")
+        })
+
+        downloadBtn.addEventListener("click", () => {
+        window.print()
+        })
     })
+    </script>
 
-    downloadBtn.addEventListener("click", () => {
-      window.print()
-    })
-  </script>
 </body>
 </html>
